--- a/package.json
+++ b/package.json
@@ -9,10 +9,8 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
+    "@nuxtjs/axios": "^5.13.6",
     "core-js": "^3.16.0",
     "nuxt": "^2.15.7"
-  },
-  "devDependencies": {
-    "@nuxtjs/pwa": "^3.3.5"
   }
 }
